<?xml version="1.0"?>
<package format="3">
  <name>mazeRobot</name>
  <version>0.1.0</version>
  <description>Controller, sensors, and brain nodes for the maze robot.</description>
  <maintainer email="aidanaaoun@gmail.com">aidan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>custom_interfaces</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
